[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit-extras>=0.7.1",
    "streamlit>=1.45.1",
    "streamlit-lottie>=0.0.5",
    "streamlit-card>=1.0.2",
    "streamlit-option-menu>=0.4.0",
    "requests>=2.32.3",
]
